--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> <!-- fonte Inter -->
     <title>Amigo Sangue Bom</title>
+
+    <script src="js/hamburger.js"></script>
 </head>
 
 <body>
@@ -15,7 +18,52 @@
     <!-------------ERICK---------------- HEADER - NAV E MAIN -------------------->
 
 
-    lerol oero
+    <header>
+
+        <div class="logo">
+            <img src="../documentos/img/logoprojeto.png" alt="Amigo Sangue Bom">
+        </div>
+        <nav>
+            <ul class="nav-bar">
+                <li><a class="nav-link" href="#sobre">Sobre o projeto</a></li>
+                <li><a class="nav-link" href="#como_doar">Como doar</a></li>
+                <li><a class="nav-link" href="#agendamento">Agendamento</a></li>
+                <li><a class="nav-link" href="#campanhas">Campanhas</a></li>
+                <li><a class="nav-link" href="#fale_conosco">Fale conosco</a></li>
+                <button class="login_signup" id="login_signup">CADASTRE-SE</button>
+            </ul>
+        </nav>
+
+        <!-- favor não mudar essa div 'hamburguer' -->
+        <div class="hamburger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="coluna1">
+                <div class="intro">
+                    <p>Doe <span>sangue</span>.</p>
+                    <p>Salve vidas!</p>
+                </div>
+                <div class="intro_text">
+
+                    <p>Você sabia que é possível fazer a diferença na vida de uma pessoa com apenas um clique?</p>
+                    <p>O Amigo Sangue Bom tem o propósito de usar a tecnologia para contribuir com o aumento de doadores
+                        no
+                        Brasil. Para que isso seja possível, contamos com a sua ajuda!</p>
+                    <p>Veja ao lado a importância da doação de sangue.</p>
+                </div>
+            </div>
+            <div class="coluna2">
+                <div class="video_sangue">Video</div><!-- div apenas de exemplo antes do video -->
+            </div>
+        </div>
+    </main>
 
 
 
