--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -155,7 +155,7 @@
     <!------BRIAN/RANAN/MATEUS----------------------- ASIDES ----------------------------->
 
 
-    <aside>
+<aside>
 
         <!-- ÁREA DE CAMPANHAS DESENVOLVIDAS POR BRIAN-->
         <h1 id="camp_title"> CAMPANHAS</h1>
@@ -247,7 +247,7 @@
         </div>
     
     
-    </aside>
+</aside>
 
 
 
@@ -267,7 +267,19 @@
 
     <!-------RANAN/MATEUS------------ SECTION 3 ---------------------------->
 
+<section>
 
+    <!-- TÍTULO DA SEÇÃO -->
+   
+
+
+
+
+
+
+
+
+</section>
 
 
 
