--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -3,6 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> <!-- fonte Inter -->
@@ -116,10 +124,34 @@
 
     <div id="containerComoDoar" class="">
     <h1 id="h1ComoDoar" class="">Como Doar</h1>
-    <h3 id="h3ComoDoar" class="">Veja abaixo os principais pré-requisitos <br> para a doação de sangue.</h3>
+    <h3 id="h3ComoDoar" class="">Veja abaixo os principais pré-requisitos para a doação de sangue.</h3>
+    
+    
+    <div id="requisito1" class="requisitos"> <p>Ter entre 16 a 69 anos de idade</p></div>
+        <div id="topicoNumber1" class="topicoNumber"><p> 1 </p></div>
+    <div id="requisito2" class="requisitos"> <p>É necessário estar em jejum? Não. Para doação de sangue priorizar alimentos leves. Em casos ter feito alimentação compostas por alimentos mais gordurosos, aguardar no minino 3 horas.</p></div>
+        <div id="topicoNumber2" class="topicoNumber"><p> 2 </p></div>
+    <div id="requisito3" class="requisitos"> <p>Estar bem hidratado.</p></div>
+        <div id="topicoNumber3" class="topicoNumber"><p> 3 </p></div>
+    <div id="requisito4" class="requisitos"> <p>Intervalo para mulheres de 90 dias e para homens a cada 60 dias.</p></div>
+        <div id="topicoNumber4" class="topicoNumber"><p> 4 </p></div>
+    <div id="requisito5" class="requisitos"> <p>Estar descansado, considerando um período de sono mínimo de 4 horas.</p></div>
+        <div id="topicoNumber5" class="topicoNumber"><p> 5 </p></div>
+
+
+    <p class="textValidar">Quer saber se você está elegível à doação? </p>
+    <p class="textValidar">Clique no botão abaixo</p>
+    <button class="login_signup" id="validarRequisito">Validar</button>
+
+    <div id="linhaAgendamento"></div>
+
+    <h1 id="tituloAgendamento"> Agendamento </h1>
+
     </div>
 
 
+
+   
 
 
 
