Inclusão de ícones para redes sociais

--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -431,10 +431,10 @@
             <div class="secoes-rodape" id="siga-nos">
                 <ul class="itens-imagem">
                     <li class="titulo-rodape">SIGA-NOS</li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="facebooklogo.png" alt="facebook"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="youtubelogo.png" alt="youtube"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="twitterlogo.png" alt="twitter"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="instagramlogo.png" alt="instagram"></a></li>
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/FacebookLogo.png" alt="facebook"></a></li>
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/YoutubeLogo.png" alt="youtube"></a></li>
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/TwitterLogo.png" alt="twitter"></a></li>
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/InstagramLogo.png" alt="instagram"></a></li>
                 </ul>
             </div>
         </div>
