--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -9,13 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
 
-
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> <!-- fonte Inter -->
     <link rel="stylesheet" href="section2.css">
+    <link rel="stylesheet" href="sect2Inic.css">
     <title>Amigo Sangue Bom</title>
 
     <script src="js/hamburger.js"></script>
@@ -85,38 +87,21 @@
 
 
     <!-------------DOUGLAS---------------- SECTION 1 ----------------------------->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <section class="containerProjeto">
+        <div>
+            <h1 class="h1-projeto">O PROJETO</h1>
+            <img src="../documentos/img/logoprojeto.png" class="logo" alt="Logo">
+            <div class="conteudo-projeto">
+                <p>O Amigo Sangue bom é um projeto desenvolvido por 6 alunos apaixonados por tecnologia e inovação do
+                    curso de Análise e Desenvolvimento de Sistemas da Puc Minas. O intuito da plataforma é atrair
+                    pessoas para contribuir com a doação de sangue. Para isso, o site permite que os usuários verifiquem
+                    a compatibilidade para doação, agende, conscientize-se e divulgue campanhas de incentivo.</p>
+            </div>
+            <div class="botaoPraCima">
+                <a href=""><img src="../documentos/img/botão-setaPraCima.png" alt="botao" class="voltar-homepage"></a>
+            </div>
+        </div>
+    </section>
 
     <!--------------DOUGLAS--------------- SECTION 1 ----------------------------->
 
@@ -431,47 +416,21 @@
             <div class="secoes-rodape" id="siga-nos">
                 <ul class="itens-imagem">
                     <li class="titulo-rodape">SIGA-NOS</li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/FacebookLogo.png" alt="facebook"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/YoutubeLogo.png" alt="youtube"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/TwitterLogo.png" alt="twitter"></a></li>
-                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/InstagramLogo.png" alt="instagram"></a></li>
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/FacebookLogo.png"
+                                alt="facebook"></a></li>
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/YoutubeLogo.png"
+                                alt="youtube"></a></li>
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/TwitterLogo.png"
+                                alt="twitter"></a></li>
+                    <li class="logo-redes"><a class="footer-link" href=""><img src="../documentos/img/InstagramLogo.png"
+                                alt="instagram"></a></li>
                 </ul>
             </div>
         </div>
     </footer>
 
-    <!-- FIM DO FOOTER-->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!----------MATEUS---------------- FOOTER ---------------------->
-
-
-
-
-
-
-
-
-
+    
 </body>
 
 </html>
