--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> <!-- fonte Inter -->
     <link rel="stylesheet" href="section2.css">
-    <link rel="stylesheet" href="sect2Inic.css">
+    <link rel="stylesheet" href="section1.css">
     <title>Amigo Sangue Bom</title>
 
     <script src="js/hamburger.js"></script>
