Correções de section

--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -6,16 +6,13 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> <!-- fonte Inter -->
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="section1.css">
     <link rel="stylesheet" href="section2.css">
     <title>Amigo Sangue Bom</title>
@@ -200,11 +197,6 @@
                 <h1>AGENDAMENTO</h1>
             </div>
         </div>
-
-
-    </section>
-
-    <section style="height: 100vh;">
 
         <div class="schedular_area">
             <div class="schedular_left">
