atualização de div

--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -27,7 +27,7 @@
     <!-------------ERICK---------------- HEADER - NAV E MAIN -------------------->
 
 
-    <header>
+<header>
 
 
         <div class="logo">
@@ -50,9 +50,9 @@
         </div>
 
 
-    </header>
+</header>
 
-    <main>
+<main>
         <div class="container">
             <div class="coluna1">
                 <div class="intro">
@@ -75,7 +75,7 @@
 
 
 
-    </main>
+</main>
     <div class="icon_model">
         <div class="icon_line_right"></div>
     </div>
@@ -89,7 +89,7 @@
 
 
     <!-------------DOUGLAS---------------- SECTION 1 ----------------------------->
-    <section class="containerProjeto">
+<section class="containerProjeto">
         <div>
             <h1 class="h1-projeto">O PROJETO</h1>
             <img src="../documentos/img/logoprojeto.png" class="logo" alt="Logo">
@@ -103,161 +103,161 @@
                 <a href=""><img src="../documentos/img/botão-setaPraCima.png" alt="botao" class="voltar-homepage"></a>
             </div>
         </div>
-    </section>
+</section>
 
     <!--------------DOUGLAS--------------- SECTION 1 ----------------------------->
 
 
     <!------DOUGLAS/LUIZ--------------- SECTION 2 ----------------------------->
 
-    <section class="how_donate">
+    <div class="how_donate">
 
         <!----------------------- TÍTULO DA SEÇÃO -------------->
-        <div class="dot_area">
-            <div class="dot_icon"></div>
-            <div class="title_how_donate">
-                <h1>COMO DOAR</h1>
-            </div>
-        </div>
-
-
-        <!----------------------- SUBTÍTULO DA SEÇÃO -------------->
-        <div class="subtitle_how_donate">
-            <h2>VEJA ABAIXO OS PRINCIPAIS PRÉ-REQUISITOS PARA A DOAÇÃO DE SANGUE</h2>
-        </div>
-
-        <!-------------------- ÁREA DE DIAGRAMA ----------->
-        <div class="steps_area">
-            <div class="steps_area_form">
-                <div class="steps_left">
-                    <div class="step_text_area1">
-                        <h4>Ter entre 16 a 69 anos de idade.</h4>
-                    </div>
-                    <div class="step_line_area1"></div>
-
-                    <div class="step_text_area3">
-                        <h4>Estar bem hidratado.</h4>
-                    </div>
-                    <div class="step_line_area3"></div>
-
-                    <div class="step_text_area5">
-                        <h4>Estar descansado, considerando um período de sono mínimo de 4 horas.</h4>
-                    </div>
-                    <div class="step_line_area5"></div>
-                </div>
-                <div class="steps_center">
-                    <div class="circle_icon">
-                        <h4>1</h4>
-                    </div>
-                    <div class="circle_icon">
-                        <h4>2</h4>
-                    </div>
-                    <div class="circle_icon">
-                        <h4>3</h4>
-                    </div>
-                    <div class="circle_icon">
-                        <h4>4</h4>
-                    </div>
-                    <div class="circle_icon">
-                        <h4>5</h4>
-                    </div>
-                </div>
-                <div class="steps_right">
-                    <div class="step_line_area2"></div>
-                    <div class="step_text_area2">
-                        <h4>É necessário estar em jejum? Não. Para doação de sangue priorizar alimentos leves. Em casos
-                            ter feito alimentação compostas por alimentos mais gordurosos, aguardar no minino 3 horas.
-                        </h4>
-                    </div>
-
-                    <div class="step_line_area4"></div>
-                    <div class="step_text_area4">
-                        <h4>Intervalo para mulheres de 90 dias e para homens a cada 60 dias.</h4>
-                    </div>
-
+            <div class="dot_area">
+                <div class="dot_icon"></div>
+                <div class="title_how_donate">
+                    <h1>COMO DOAR</h1>
                 </div>
             </div>
-        </div>
 
-        <!------------- ÁREA DE VALIDAÇÃO DE REQUISITOS------------>
-        <div class="validation_area">
-            <div class="validation_text">
-                <h4>Quer saber se você está elegível à doação? Clique no botão abaixo.</h4>
+
+            <!----------------------- SUBTÍTULO DA SEÇÃO -------------->
+            <div class="subtitle_how_donate">
+                <h2>VEJA ABAIXO OS PRINCIPAIS PRÉ-REQUISITOS PARA A DOAÇÃO DE SANGUE</h2>
             </div>
-            <button id="validation_button"> Validar </button>
-        </div>
 
-        <div class="line_section">
-            <div class="line_section_main"></div>
-        </div>
+            <!-------------------- ÁREA DE DIAGRAMA ----------->
+            <div class="steps_area">
+                <div class="steps_area_form">
+                    <div class="steps_left">
+                        <div class="step_text_area1">
+                            <h4>Ter entre 16 a 69 anos de idade.</h4>
+                        </div>
+                        <div class="step_line_area1"></div>
 
-        <div class="dot_area_agendamento">
-            <div class="dot_icon"></div>
-            <div class="title_how_donate">
-                <h1>AGENDAMENTO</h1>
-            </div>
-        </div>
+                        <div class="step_text_area3">
+                            <h4>Estar bem hidratado.</h4>
+                        </div>
+                        <div class="step_line_area3"></div>
 
-        <div class="schedular_area">
-            <div class="schedular_left">
-
-                <div class="calendar_main">
-                    <div class="calendar">
-                        <div class="month">Outubro 2023</div>
-                        <div class="days">
-                            <div class="week">D</div>
-                            <div class="week">S</div>
-                            <div class="week">T</div>
-                            <div class="week">Q</div>
-                            <div class="week">Q</div>
-                            <div class="week">S</div>
-                            <div class="week">S</div>
-                            <div class="dayoff">29</div>
-                            <div class="dayoff">30</div>
-                            <div class="day">1</div>
-                            <div class="day">2</div>
-                            <div class="day">3</div>
-                            <div class="day">4</div>
-                            <div class="day">5</div>
-                            <div class="day">6</div>
-                            <div class="day">7</div>
-                            <div class="day">8</div>
-                            <div class="day">9</div>
-                            <div class="day">10</div>
-                            <div class="day">11</div>
-                            <div class="day">12</div>
-                            <div class="day">13</div>
-                            <div class="day">14</div>
-                            <div class="day">15</div>
-                            <div class="day">16</div>
-                            <div class="day">17</div>
-                            <div class="day">18</div>
-                            <div class="day">19</div>
-                            <div class="day">20</div>
-                            <div class="day">21</div>
-                            <div class="day">22</div>
-                            <div class="day">23</div>
-                            <div class="day">24</div>
-                            <div class="day">25</div>
-                            <div class="day">26</div>
-                            <div class="day">27</div>
-                            <div class="day">28</div>
-                            <div class="day">29</div>
-                            <div class="day">30</div>
-                            <div class="day">31</div>
+                        <div class="step_text_area5">
+                            <h4>Estar descansado, considerando um período de sono mínimo de 4 horas.</h4>
+                        </div>
+                        <div class="step_line_area5"></div>
+                    </div>
+                    <div class="steps_center">
+                        <div class="circle_icon">
+                            <h4>1</h4>
+                        </div>
+                        <div class="circle_icon">
+                            <h4>2</h4>
+                        </div>
+                        <div class="circle_icon">
+                            <h4>3</h4>
+                        </div>
+                        <div class="circle_icon">
+                            <h4>4</h4>
+                        </div>
+                        <div class="circle_icon">
+                            <h4>5</h4>
                         </div>
                     </div>
+                    <div class="steps_right">
+                        <div class="step_line_area2"></div>
+                        <div class="step_text_area2">
+                            <h4>É necessário estar em jejum? Não. Para doação de sangue priorizar alimentos leves. Em casos
+                                ter feito alimentação compostas por alimentos mais gordurosos, aguardar no minino 3 horas.
+                            </h4>
+                        </div>
+
+                        <div class="step_line_area4"></div>
+                        <div class="step_text_area4">
+                            <h4>Intervalo para mulheres de 90 dias e para homens a cada 60 dias.</h4>
+                        </div>
+
+                    </div>
                 </div>
-                <div class="button_main"><button>Agendar</button></div>
-            </div>
-            <div class="schedular_right">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d7502.07054340623!2d-43.995961457785484!3d-19.922918425855517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1spuc%20minas%20eucaristico!5e0!3m2!1spt-BR!2sbr!4v1696985356185!5m2!1spt-BR!2sbr"
-                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
-        </div>
-    </section>
+            <!------------- ÁREA DE VALIDAÇÃO DE REQUISITOS------------>
+            <div class="validation_area">
+                <div class="validation_text">
+                    <h4>Quer saber se você está elegível à doação? Clique no botão abaixo.</h4>
+                </div>
+                <button id="validation_button"> Validar </button>
+            </div>
+
+            <div class="line_section">
+                <div class="line_section_main"></div>
+            </div>
+
+            <div class="dot_area_agendamento">
+                <div class="dot_icon"></div>
+                <div class="title_how_donate">
+                    <h1>AGENDAMENTO</h1>
+                </div>
+            </div>
+
+            <div class="schedular_area">
+                <div class="schedular_left">
+
+                    <div class="calendar_main">
+                        <div class="calendar">
+                            <div class="month">Outubro 2023</div>
+                            <div class="days">
+                                <div class="week">D</div>
+                                <div class="week">S</div>
+                                <div class="week">T</div>
+                                <div class="week">Q</div>
+                                <div class="week">Q</div>
+                                <div class="week">S</div>
+                                <div class="week">S</div>
+                                <div class="dayoff">29</div>
+                                <div class="dayoff">30</div>
+                                <div class="day">1</div>
+                                <div class="day">2</div>
+                                <div class="day">3</div>
+                                <div class="day">4</div>
+                                <div class="day">5</div>
+                                <div class="day">6</div>
+                                <div class="day">7</div>
+                                <div class="day">8</div>
+                                <div class="day">9</div>
+                                <div class="day">10</div>
+                                <div class="day">11</div>
+                                <div class="day">12</div>
+                                <div class="day">13</div>
+                                <div class="day">14</div>
+                                <div class="day">15</div>
+                                <div class="day">16</div>
+                                <div class="day">17</div>
+                                <div class="day">18</div>
+                                <div class="day">19</div>
+                                <div class="day">20</div>
+                                <div class="day">21</div>
+                                <div class="day">22</div>
+                                <div class="day">23</div>
+                                <div class="day">24</div>
+                                <div class="day">25</div>
+                                <div class="day">26</div>
+                                <div class="day">27</div>
+                                <div class="day">28</div>
+                                <div class="day">29</div>
+                                <div class="day">30</div>
+                                <div class="day">31</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="button_main"><button>Agendar</button></div>
+                </div>
+                <div class="schedular_right">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d7502.07054340623!2d-43.995961457785484!3d-19.922918425855517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1spuc%20minas%20eucaristico!5e0!3m2!1spt-BR!2sbr!4v1696985356185!5m2!1spt-BR!2sbr"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+
+            </div>
+    </div>
 
     <!---------DOUGLAS/LUIZ--------------- SECTION 2 ------------------------------------->
 
