--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -110,7 +110,7 @@
 
     <!------DOUGLAS/LUIZ--------------- SECTION 2 ----------------------------->
 
-    <div class="how_donate">
+    <section class="how_donate">
 
         <!----------------------- TÍTULO DA SEÇÃO -------------->
             <div class="dot_area">
@@ -179,6 +179,7 @@
                 </div>
             </div>
 
+
             <!------------- ÁREA DE VALIDAÇÃO DE REQUISITOS------------>
             <div class="validation_area">
                 <div class="validation_text">
@@ -190,7 +191,11 @@
             <div class="line_section">
                 <div class="line_section_main"></div>
             </div>
+        </section>
 
+    </section>
+
+    <section class="how_agendamento">
             <div class="dot_area_agendamento">
                 <div class="dot_icon"></div>
                 <div class="title_how_donate">
@@ -257,8 +262,8 @@
                 </div>
 
             </div>
-    </div>
-
+        </div>
+    </section>
     <!---------DOUGLAS/LUIZ--------------- SECTION 2 ------------------------------------->
 
 
