atualização de responsividade

--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -287,7 +287,7 @@
                 </div>
                 <a href="#">
                     <div class="camp_img">
-                        <img src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/doe_1.png"
+                        <img src="../documentos/img/doe_1.png"
                             alt="">
                     </div>
                 </a>
@@ -298,13 +298,13 @@
 
                 <div class="icon_area">
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Facebook.png"
+                                src="../documentos/img/Facebook.png"
                                 alt="Curtir"></a></div>
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Favorite.png"
+                                src="../documentos/img/Favorite.png"
                                 alt="Favoritar"></a></div>
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Right.png"
+                                src="../documentos/img/Right.png"
                                 alt="Compartilhar"></a></div>
                 </div>
             </div>
@@ -315,7 +315,7 @@
                 </div>
                 <a href="#">
                     <div class="camp_img">
-                        <img src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/doe_2.png"
+                        <img src="../documentos/img/doe_2.png"
                             alt="">
                     </div>
                 </a>
@@ -326,13 +326,13 @@
 
                 <div class="icon_area">
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Facebook.png"
+                                src="../documentos/img/Facebook.png"
                                 alt="Curtir"></a></div>
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Favorite.png"
+                                src="../documentos/img/Favorite.png"
                                 alt="Favoritar"></a></div>
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Right.png"
+                                src="../documentos/img/Right.png"
                                 alt="Compartilhar"></a></div>
                 </div>
             </div>
@@ -343,7 +343,7 @@
                 </div>
                 <a href="#">
                     <div class="camp_img">
-                        <img src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/doe_3.png"
+                        <img src="../documentos/img/doe_3.png"
                             alt="">
                     </div>
                 </a>
@@ -354,13 +354,13 @@
 
                 <div class="icon_area">
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Facebook.png"
+                                src="../documentos/img/Facebook.png"
                                 alt="Curtir"></a></div>
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Favorite.png"
+                                src="../documentos/img/Favorite.png"
                                 alt="Favoritar"></a></div>
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Right.png"
+                                src="../documentos/img/Right.png"
                                 alt="Compartilhar"></a></div>
                 </div>
             </div>
@@ -371,7 +371,7 @@
                 </div>
                 <a href="#">
                     <div class="camp_img">
-                        <img src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/doe_4.png"
+                        <img src="../documentos/img/doe_4.png"
                             alt="">
                     </div>
                 </a>
@@ -382,13 +382,13 @@
 
                 <div class="icon_area">
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Facebook.png"
+                                src="../documentos/img/Facebook.png"
                                 alt="Curtir"></a></div>
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Favorite.png"
+                                src="../documentos/img/Favorite.png"
                                 alt="Favoritar"></a></div>
                     <div class="fb-icon"> <a href="#"><img
-                                src="/pmv-ads-2023-2-e1-proj-web-t9-pmv-ads-2023-2-e1-projetoamigosanguebom/documentos/img/Right.png"
+                                src="../documentos/img/Right.png"
                                 alt="Compartilhar"></a></div>
                 </div>
             </div>
