Aplicação de responsividade

--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -90,18 +90,27 @@
 
     <!-------------DOUGLAS---------------- SECTION 1 ----------------------------->
 <section class="containerProjeto">
-        <div>
-            <h1 class="h1-projeto">O PROJETO</h1>
-            <img src="../documentos/img/logoprojeto.png" class="logo" alt="Logo">
-            <div class="conteudo-projeto">
-                <p>O Amigo Sangue bom é um projeto desenvolvido por 6 alunos apaixonados por tecnologia e inovação do
-                    curso de Análise e Desenvolvimento de Sistemas da Puc Minas. O intuito da plataforma é atrair
-                    pessoas para contribuir com a doação de sangue. Para isso, o site permite que os usuários verifiquem
-                    a compatibilidade para doação, agende, conscientize-se e divulgue campanhas de incentivo.</p>
+        <div class="projeto_title">
+            <div class="dot_area_agendamento">
+                <div class="dot_icon"></div>
             </div>
-            <div class="botaoPraCima">
-                <a href=""><img src="../documentos/img/botão-setaPraCima.png" alt="botao" class="voltar-homepage"></a>
-            </div>
+            <h1>O PROJETO</h1>
+        </div>
+            
+        <div class="logo_section1">
+                <img src="../documentos/img/logoprojeto.png" alt="Logo">
+        
+
+                <div class="conteudo-projeto">
+                    <p>O Amigo Sangue bom é um projeto desenvolvido por 6 alunos apaixonados por tecnologia e inovação do
+                        curso de Análise e Desenvolvimento de Sistemas da Puc Minas. O intuito da plataforma é atrair
+                        pessoas para contribuir com a doação de sangue. Para isso, o site permite que os usuários verifiquem
+                        a compatibilidade para doação, agende, conscientize-se e divulgue campanhas de incentivo.</p>
+                </div>
+        </div>
+                <div class="botaoPraCima">
+                    <a href=""><img src="../documentos/img/botão-setaPraCima.png" alt="botao" class="voltar-homepage"></a>
+                </div>
         </div>
 </section>
 
