Atualização de pastas

--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -12,9 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> <!-- fonte Inter -->
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="section1.css">
-    <link rel="stylesheet" href="section2.css">
+    <link rel="stylesheet" href="index.css">
     <title>Amigo Sangue Bom | Bem Vindo </title>
 
     <script src="js/hamburger.js"></script>
