--- a/codigo-fonte/index.html
+++ b/codigo-fonte/index.html
@@ -417,7 +417,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="button_main"><button>Agendar</button></div>
+                <div class="button_main"><a href="https://www.mg.gov.br/agendamento_servico/doacao-de-sangue" target="_blank" rel="noopener noreferrer"><button>Agendar</button></a></div>
             </div>
             <div class="schedular_right">
                 <iframe
